# sunox

./: .gitignore  API_INTELLIGENCE.md  CHANGELOG.md  Cargo.toml  README.es.md  README.fr.md  README.ja.md  README.md  README.zh-CN.md
.github/workflows/: ci.yml  release.yml
assets/: SKILL.md
assets/browser-extension/: bridge.js  config.js  manifest.json  page.js  service-worker.js  transport-loopback.js
docs/: RELEASING.md
docs/research/: suno-recent-feature-gaps-2026-07-15.md
scripts/: release-notes.sh
src/: browser.rs  main.rs
src/api/: auth_retry.rs  billing.rs  challenge.rs  client.rs  clip_info.rs  concat.rs  cover.rs  delete.rs  download.rs  edit.rs  endpoint_tests.rs  extend.rs  feed.rs  generate.rs  headers.rs  inspiration.rs  lyrics.rs  metadata.rs  mod.rs  persona.rs  playlist.rs  prompts.rs  remaster.rs  response.rs  stems.rs  upload.rs
src/api/types/: account.rs  clip.rs  clip_info.rs  feed.rs  generation.rs  lyrics.rs  metadata.rs  mod.rs  operations.rs  persona.rs  playlist.rs  prompts.rs  upload.rs
src/app/: context.rs  dispatch.rs  mutation_lock.rs
src/auth/: browser.rs  clerk.rs  cookie.rs  environment.rs  interactive.rs  mod.rs  refresh.rs  refresh_lock.rs  state.rs  types.rs
src/captcha/: bridge_contract.rs  browser.rs  existing.rs  mod.rs
src/captcha/cdp/: solver.rs  target.rs
src/captcha/cookies/: browser.rs  cdp_cookie.rs  mod.rs
src/cli/: auth.rs  browser_extension.rs  clip.rs  create.rs  doctor.rs  library.rs  media.rs  mod.rs  models.rs  persona.rs  playlist.rs
src/commands/: account.rs  auth.rs  browser_extension.rs  config.rs  doctor.rs  media.rs  mod.rs  update.rs  wait.rs
src/commands/agent/: info.rs  skill.rs
src/commands/create/: inspire.rs  lyrics.rs  mod.rs  submit.rs  support.rs  transform.rs
src/commands/persona/: mod.rs
src/commands/playlist/: mod.rs
src/core/: config.rs  error.rs  mod.rs  paths.rs  polling.rs  validation.rs
src/media/: download.rs  mod.rs
src/net/: http.rs  mod.rs  proxy.rs
src/output/: json.rs
src/output/table/: account.rs  clip.rs  mod.rs
src/workflow/: generation.rs  image_upload.rs  mod.rs  playlist.rs  tasks.rs  upload.rs
tests/: cli_smoke.rs
