[package]
name = "sunox"
version = "0.0.14"
edition = "2024"
rust-version = "1.88"
description = "Generate AI music from your terminal via direct Suno web workflows"
license = "MIT"
repository = "https://github.com/ctykwz/sunox"
homepage = "https://github.com/ctykwz/sunox"
readme = "README.md"
keywords = ["suno", "music", "ai", "cli", "audio"]
categories = ["command-line-utilities", "multimedia::audio"]

[[bin]]
name = "sunox"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "fs", "process", "net"] }
tokio-util = { version = "0.7", features = ["io"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls", "stream"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"
figment = { version = "0.10", features = ["toml", "env"] }
comfy-table = "7"
indicatif = "0.18"
directories = "5"
base64 = "0.22"
futures-util = "0.3"
fs2 = "0.4"
id3 = "1"
rookie = "0.5"
sha2 = "0.11"
uuid = { version = "1", features = ["v4"] }
tempfile = "3"
self_update = { version = "1.0.0-rc.3", default-features = false, features = ["ureq", "rustls", "progress-bar", "github", "checksums", "compression-tar-gz", "compression-zip-deflate"] }

[dev-dependencies]
assert_cmd = "2"
flate2 = "1"
predicates = "3"
tar = "0.4"
zip = { version = "8", default-features = false }

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
